--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -122,7 +122,7 @@ header {
 // hero starts
 
 .hero {
-  background: url("../images/hero.jpg");
+  background: url("../images/hero2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -199,6 +199,7 @@ header {
   .icons {
     flex: 1 1 40rem;
     color: $black;
+    // overflow: hidden;
     .container {
       // display: flex;
       // justify-content: space-around;
@@ -209,22 +210,34 @@ header {
       @include grid(15rem);
 
       .box {
-        // font-size: 8rem;
+        height: 15rem;
+        width: 15rem;
+        border: 2px solid $black;
+        border-radius: 50%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        vertical-align: middle;
+        font-size: 80rem;
         // border: 0.2rem solid $black;
         // border-radius: 50%;
-        text-align: center;
-        // padding: 4rem 0;
+        // text-align: center;
+        // overflow: hidden;
+
+        padding: 2rem;
 
         svg {
-          font-size: 8rem;
-          border: 0.2rem solid $black;
-          border-radius: 50%;
-          padding: 1rem;
+          // font-size: 8rem;
+          // border: 0.2rem solid $black;
+          // border-radius: 50%;
+          // padding: 1rem;
         }
 
         .content {
           font-size: 1.5rem;
-          transform: translateX(3%);
+          // transform: translateX(3%);
           text-align: center;
           padding: 1rem;
         }
