--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -192,6 +192,8 @@ header {
   align-items: center;
   gap: 2rem;
   flex-wrap: wrap;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 
   .content {
     flex: 1 1 40rem;
@@ -203,6 +205,7 @@ header {
     .container {
       // display: flex;
       // justify-content: space-around;
+      // align-items: center;
       // flex: 1 1 20rem;
       // flex-wrap: wrap;
       // gap: 4rem;
@@ -322,14 +325,15 @@ header {
   .frgBackground {
     .icons {
       .container {
-        .box {
-          .content {
-            font-size: 1.5rem;
-            transform: translateX(0%);
-            text-align: center;
-            padding: 1rem;
-          }
-        }
+        display: flex;
+        flex-direction: column;
+        gap: 4rem;
+        align-items: center;
+        justify-content: center;
+        // .box {
+        //   .content {
+        //   }
+        // }
       }
     }
   }
