--- a/src/css/index.css
+++ b/src/css/index.css
@@ -47,16 +47,17 @@ footer {
 }
 
 header {
-  width: 100%;
-  background: #fff;
   position: sticky;
+  width: 100%;
   top: 0;
-  right: 0;
   left: 0;
+  right: 0;
   z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 2rem 9%;
+  background: #fff;
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.05);
 }
 header .logo {
@@ -145,7 +146,7 @@ header .icons svg:hover {
   letter-spacing: 0.1rem;
   margin: 0.5rem 0;
   line-height: 1.5;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 .mission .image {
   flex: 1 1 40rem;
