--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,8 +18,10 @@ html {
   background: #f7f7f7;
 }
 
-section,
-header,
+section {
+  padding: 2rem 9%;
+}
+
 footer {
   padding: 2rem 9%;
 }
@@ -139,20 +141,21 @@ header .icons svg:hover {
   flex-wrap: wrap;
 }
 .mission .content {
-  flex: 1 1 40rem;
+  flex: 1 1 30rem;
 }
 .mission .content p {
   color: #666;
   letter-spacing: 0.1rem;
   margin: 0.5rem 0;
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 .mission .image {
-  flex: 1 1 40rem;
+  flex: 1 1 30rem;
 }
 .mission .image img {
   width: 100%;
+  height: 100%;
 }
 
 .frgBackground {
@@ -175,6 +178,7 @@ header .icons svg:hover {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 1.5rem;
+  overflow-x: hidden;
 }
 .frgBackground .icons .container .box {
   height: 15rem;
@@ -200,8 +204,12 @@ header .icons svg:hover {
   html {
     font-size: 55%;
   }
-  section,
-  header,
+  section {
+    padding: 2rem;
+  }
+  header {
+    padding: 2rem;
+  }
   footer {
     padding: 2rem;
   }
