--- a/src/css/index.css
+++ b/src/css/index.css
@@ -155,7 +155,6 @@ header .icons svg:hover {
 }
 .mission .image img {
   width: 100%;
-  height: 100%;
 }
 
 .frgBackground {
@@ -164,11 +163,14 @@ header .icons svg:hover {
   align-items: center;
   gap: 2rem;
   flex-wrap: wrap;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 .frgBackground .content {
   flex: 1 1 40rem;
+}
+.frgBackground .content .title {
+  font-size: 4rem;
 }
 .frgBackground .icons {
   flex: 1 1 40rem;
@@ -178,7 +180,7 @@ header .icons svg:hover {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 1.5rem;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .frgBackground .icons .container .box {
   height: 15rem;
@@ -198,6 +200,34 @@ header .icons svg:hover {
   font-size: 1.5rem;
   text-align: center;
   padding: 1rem;
+}
+
+.recent .container {
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  gap: 1.5rem;
+}
+.recent .container .box .image {
+  height: 60%;
+}
+.recent .container .box .image img {
+  height: 100%;
+  width: 100%;
+}
+.recent .container .box .content {
+  margin: 2rem 0;
+}
+.recent .container .box .content .time {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1.5rem;
+  color: #666;
+}
+.recent .container .box .content .title {
+  padding: 1rem 0;
+  font-size: 1.7rem;
 }
 
 @media all and (max-width: 991px) {
