--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -182,7 +182,6 @@ header {
 
     img {
       width: 100%;
-      height: 100%;
     }
   }
 }
@@ -196,11 +195,14 @@ header {
   align-items: center;
   gap: 2rem;
   flex-wrap: wrap;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 
   .content {
     flex: 1 1 40rem;
+    .title {
+      font-size: 4rem;
+    }
   }
   .icons {
     flex: 1 1 40rem;
@@ -215,7 +217,7 @@ header {
       // gap: 4rem;
       // font-size: 8rem;
       @include grid(15rem);
-      overflow-x: hidden;
+      overflow: hidden;
 
       .box {
         height: 15rem;
@@ -254,6 +256,36 @@ header {
   }
 }
 // foreground section ends
+
+.recent {
+  .container {
+    padding: 2rem 0;
+    @include grid(35rem);
+    .box {
+      .image {
+        height: 60%;
+        img {
+          height: 100%;
+          width: 100%;
+        }
+      }
+      .content {
+        margin: 2rem 0;
+        .time {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+          font-size: 1.5rem;
+          color: $light-color;
+        }
+        .title {
+          padding: 1rem 0;
+          font-size: 1.7rem;
+        }
+      }
+    }
+  }
+}
 
 // media queries
 @media all and (max-width: 991px) {
