--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -9,3 +9,4 @@ $bright-yellow: #ffe900;
 $bg: #fefdfc;
 $border: 0.1rem solid rgba(0, 0, 0, 0.2);
 $box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.05);
+$box-shadow1: 0 1rem 2rem rgba(0, 0, 0, 0.5);
