--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -257,33 +257,95 @@ header {
 }
 // foreground section ends
 
+// recent section starts
 .recent {
   .container {
-    padding: 2rem 0;
     @include grid(35rem);
+    padding: 2rem 0;
+    // overflow: hidden;
     .box {
+      &:hover {
+        box-shadow: $box-shadow1;
+        transition: 0.4s linear;
+        cursor: pointer;
+      }
       .image {
         height: 60%;
         img {
           height: 100%;
           width: 100%;
+          object-fit: cover;
         }
       }
       .content {
-        margin: 2rem 0;
+        padding: 2rem 2rem 0rem;
+        margin-top: 2rem;
         .time {
           display: flex;
           align-items: center;
           gap: 0.5rem;
-          font-size: 1.5rem;
+          font-size: 1.2rem;
           color: $light-color;
         }
         .title {
-          padding: 1rem 0;
+          padding: 0.5rem 0;
           font-size: 1.7rem;
+        }
+        article {
+          font-size: 1rem;
+          line-height: 1.5;
+          letter-spacing: 0.1rem;
+          color: $light-color;
+          padding-bottom: 1rem;
+        }
+        .link {
+          color: $yellow;
+          font-size: 1.2rem;
+          &:hover {
+            color: $black;
+          }
         }
       }
     }
+  }
+  .button {
+    text-align: center;
+    padding: 6rem 0;
+  }
+}
+// recent section ends
+
+// BackgroundImgBanner section starts
+.BackgroundImgBanner {
+  background: url("../images/BackgroundImgBanner.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
+  }
+  h3 {
+    color: $white;
+    font-size: 8rem;
+    text-transform: uppercase;
+    padding: 4rem 0;
+    text-shadow: 0.2rem 0.2rem black;
+    text-align: center;
+  }
+}
+// BackgroundImgBanner section ends
+
+.our-team {
+  .container {
+    @include grid(35rem);
   }
 }
 
