--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -272,7 +272,7 @@ header {
       }
 
       .image {
-        height: 60%;
+        height: 45rem;
         img {
           height: 100%;
           width: 100%;
@@ -280,7 +280,7 @@ header {
         }
       }
       .content {
-        padding: 2rem 2rem 0rem;
+        padding: 2rem;
         margin-top: 2rem;
         .time {
           display: flex;
@@ -350,50 +350,48 @@ header {
 .our-team {
   .container {
     @include grid(35rem);
+    gap: 2.5rem;
 
     .box {
+      background: $light-yellow;
+
       &:hover {
         box-shadow: $box-shadow1;
-        transition: 0.4s linear;
         cursor: pointer;
       }
+
       .image {
-        height: 60%;
+        height: 45rem;
+        // overflow: hidden;
+        // width: 100%;
         img {
-          height: 100%;
           width: 100%;
+          height: 100%;
           object-fit: cover;
         }
       }
       .content {
-        padding-top: 2rem 2rem 0rem;
-        padding: 0 2rem;
-        margin-top: 2rem;
-
+        padding: 2rem;
+        text-align: center;
+        p {
+          color: $light-color;
+          font-size: 1.5rem;
+          padding-top: 1rem;
+        }
         .title {
           padding: 0.5rem 0;
-          font-size: 1.7rem;
+          font-size: 2.5rem;
         }
         article {
-          font-size: 1rem;
-          line-height: 1.5;
-          letter-spacing: 0.1rem;
-          color: $light-color;
-          padding-bottom: 1rem;
-        }
-        .link {
-          color: $yellow;
-          font-size: 1.2rem;
-          &:hover {
-            color: $black;
-          }
+          font-size: 1.3rem;
+          line-height: 1.5rem;
         }
       }
     }
   }
   .button {
     text-align: center;
-    padding: 4rem 0;
+    padding: 6rem 0;
   }
 }
 
