--- a/src/css/index.css
+++ b/src/css/index.css
@@ -163,7 +163,8 @@ header .icons svg:hover {
   align-items: center;
   gap: 2rem;
   flex-wrap: wrap;
-  height: 50rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 .frgBackground .content {
   flex: 1 1 40rem;
@@ -276,7 +277,7 @@ header .icons svg:hover {
   color: #fff;
   font-size: 8rem;
   text-transform: uppercase;
-  padding: 4rem 0;
+  transform: translateY(35%);
   text-shadow: 0.2rem 0.2rem black;
   text-align: center;
   overflow: hidden;
@@ -384,6 +385,7 @@ header .icons svg:hover {
   }
   .BackgroundImgBanner h3 {
     font-size: 4rem;
+    transform: translateY(90%);
   }
 }
 @media all and (max-width: 450px) {
