--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -299,6 +299,7 @@ header {
           letter-spacing: 0.1rem;
           color: $light-color;
           padding-bottom: 1rem;
+          text-align: justify;
         }
         .link {
           color: $yellow;
