--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -294,7 +294,7 @@ header {
           font-size: 1.7rem;
         }
         article {
-          font-size: 1rem;
+          font-size: 1.4rem;
           line-height: 1.5;
           letter-spacing: 0.1rem;
           color: $light-color;
@@ -384,7 +384,8 @@ header {
           font-size: 2.5rem;
         }
         article {
-          font-size: 1.3rem;
+          font-size: 1.4rem;
+          color: $light-color;
           line-height: 1.5rem;
         }
       }
