--- a/src/css/index.css
+++ b/src/css/index.css
@@ -214,7 +214,7 @@ header .icons svg:hover {
   cursor: pointer;
 }
 .recent .container .box .image {
-  height: 45rem;
+  height: 40rem;
 }
 .recent .container .box .image img {
   height: 100%;
@@ -298,7 +298,7 @@ header .icons svg:hover {
   cursor: pointer;
 }
 .our-team .container .box .image {
-  height: 45rem;
+  height: 40rem;
 }
 .our-team .container .box .image img {
   width: 100%;
@@ -327,6 +327,30 @@ header .icons svg:hover {
 .our-team .button {
   text-align: center;
   padding: 6rem 0;
+}
+
+footer {
+  background: #f2c94c;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+footer .nav ul {
+  display: flex;
+}
+footer .nav ul li .links {
+  font-size: 1.5rem;
+  margin: 0 1rem;
+  color: #666;
+}
+footer .nav ul li .links:hover {
+  color: #fff;
+}
+footer .copyright {
+  font-size: 1.5rem;
+  color: #666;
 }
 
 @media all and (max-width: 991px) {
