--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,6 +48,11 @@ footer {
   padding: 2rem 0;
 }
 
+.logo {
+  font-size: 4rem;
+  cursor: pointer;
+}
+
 header {
   position: sticky;
   width: 100%;
@@ -61,10 +66,6 @@ header {
   padding: 2rem 9%;
   background: #fff;
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.05);
-}
-header .logo {
-  font-size: 4rem;
-  cursor: pointer;
 }
 header .nav ul {
   display: flex;
@@ -331,26 +332,57 @@ header .icons svg:hover {
 
 footer {
   background: #f2c94c;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
-footer .nav ul {
-  display: flex;
+footer .top {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  gap: 1.5rem;
 }
-footer .nav ul li .links {
+footer .top .box {
+  color: #666;
   font-size: 1.5rem;
-  margin: 0 1rem;
+}
+footer .top .box .logo-socials {
+  text-align: center;
+}
+footer .top .box .logo-socials .socials {
+  font-size: 3rem;
+}
+footer .top .box .logo-socials .socials svg {
+  margin: 2.5rem 0.5rem;
+  color: #130f40;
+}
+footer .top .box .links .nav ul li {
+  padding: 1rem 0;
+}
+footer .top .box .links .nav ul li .links {
+  font-size: 1.5rem;
   color: #666;
 }
-footer .nav ul li .links:hover {
+footer .top .box .links .nav ul li .links:hover {
   color: #fff;
 }
+footer .top .box .address,
+footer .top .box .phone,
+footer .top .box .email {
+  padding: 1rem 0;
+}
+footer .top .box .address:hover,
+footer .top .box .phone:hover,
+footer .top .box .email:hover {
+  color: #fff;
+  cursor: pointer;
+}
+footer .top .box .mail {
+  text-transform: lowercase;
+}
 footer .copyright {
+  border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+  margin-top: 1rem;
   font-size: 1.5rem;
   color: #666;
+  text-align: center;
+  padding: 2rem 0;
 }
 
 @media all and (max-width: 991px) {
