--- a/src/css/index.css
+++ b/src/css/index.css
@@ -255,7 +255,9 @@ header .icons svg:hover {
 }
 .recent .button {
   text-align: center;
-  padding: 6rem 0;
+  padding: 2rem 0;
+  margin: 6rem 0;
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
 }
 
 .BackgroundImgBanner {
@@ -327,7 +329,9 @@ header .icons svg:hover {
 }
 .our-team .button {
   text-align: center;
-  padding: 6rem 0;
+  padding: 2rem 0;
+  margin: 6rem 0;
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
 }
 
 footer {
