--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -313,7 +313,9 @@ header {
   }
   .button {
     text-align: center;
-    padding: 6rem 0;
+    padding: 2rem 0;
+    margin: 6rem 0;
+    border-bottom: $border;
   }
 }
 // recent section ends
@@ -394,7 +396,9 @@ header {
   }
   .button {
     text-align: center;
-    padding: 6rem 0;
+    padding: 2rem 0;
+    margin: 6rem 0;
+    border-bottom: $border;
   }
 }
 // out team section ends
