--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -63,19 +63,18 @@ footer {
 
 .topBanner {
   padding: 0;
-  .image {
+  height: 40vh;
+  position: relative;
+
+  img {
     height: 40vh;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      position: relative;
-    }
+    width: 100%;
+    object-fit: cover;
   }
   .content {
     position: absolute;
-    top: 20vh;
-    // left: 3rem;
+    // max-width: 70%;
+    top: 10vh;
     color: $white;
     padding: 2rem 9%;
     z-index: 1000;
@@ -86,16 +85,17 @@ footer {
   }
   &::after {
     content: "";
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.5);
     width: 100%;
-    // height: 100%;
-    position: absolute;
-    height: 48.5vh;
+    height: 40vh;
+    background: rgba(0, 0, 0, 0.5);
   }
 }
+
+// global styles
 
 // header styles starts
 header {
@@ -584,6 +584,14 @@ footer {
       transform: translateY(90%);
     }
   }
+
+  // .topBanner {
+  //   .content {
+  //     h2 {
+  //       font-size: 3rem;
+  //     }
+  //   }
+  // }
 }
 
 @media all and (max-width: 450px) {
