--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -121,8 +121,11 @@ header {
           font-size: 1.5rem;
           margin: 0 1rem;
           color: $light-color;
-          &:hover {
+          &:hover,
+          &.active {
             color: $yellow;
+            background: $black;
+            padding: 1rem 2rem;
           }
         }
       }
