--- a/src/css/index.css
+++ b/src/css/index.css
@@ -87,6 +87,11 @@ footer {
   background: rgba(0, 0, 0, 0.7);
 }
 
+.map {
+  width: 100%;
+  height: 50rem;
+}
+
 header {
   position: sticky;
   width: 100%;
@@ -558,6 +563,13 @@ footer .copyright {
   border-radius: 0.5rem;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
   position: relative;
+}
+.contact-form form p {
+  padding: 1rem 0;
+  text-align: center;
+  font-size: 1.2rem;
+  color: #130f40;
+  letter-spacing: 0.1rem;
 }
 .contact-form form .inputField {
   padding: 0.2rem 0;
