--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -96,6 +96,11 @@ footer {
   }
 }
 
+.map {
+  width: 100%;
+  height: 50rem;
+}
+
 // global styles
 
 // header styles starts
@@ -657,6 +662,13 @@ footer {
     border-radius: 0.5rem;
     box-shadow: $box-shadow1;
     position: relative;
+    p {
+      padding: 1rem 0;
+      text-align: center;
+      font-size: 1.2rem;
+      color: $black;
+      letter-spacing: 0.1rem;
+    }
     .inputField {
       padding: 0.2rem 0;
       input,
