responsive contact form

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -568,6 +568,7 @@ footer .copyright {
   padding: 1rem 0;
   text-align: center;
   font-size: 1.2rem;
+  font-weight: bold;
   color: #130f40;
   letter-spacing: 0.1rem;
 }
@@ -646,6 +647,9 @@ footer .copyright {
   .BackgroundImgBanner h3 {
     font-size: 4rem;
     transform: translateY(90%);
+  }
+  .contact-form form {
+    width: 100%;
   }
 }
 @media all and (max-width: 450px) {
