--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -59,6 +59,11 @@ footer {
 
 .logo {
   font-size: 4rem;
+  // position: relative;
+  max-width: 7rem;
+  // height: 4rem;
+  // width: 4rem;
+  // filter: invert(2);
   cursor: pointer;
 }
 
