--- a/src/css/index.css
+++ b/src/css/index.css
@@ -340,7 +340,6 @@ header .icons svg:hover {
 }
 .our-team .container .box:hover {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
-  cursor: pointer;
 }
 .our-team .container .box .image {
   height: 30rem;
@@ -365,9 +364,11 @@ header .icons svg:hover {
   font-size: 2.5rem;
 }
 .our-team .container .box .content article {
-  font-size: 1.4rem;
-  color: #666;
-  line-height: 1.5rem;
+  font-size: 1.2rem;
+  color: black;
+  font-weight: 500;
+  line-height: 1.8rem;
+  letter-spacing: 0.1rem;
 }
 .our-team .button {
   text-align: center;
