--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -412,7 +412,6 @@ header {
 
       &:hover {
         box-shadow: $box-shadow1;
-        cursor: pointer;
       }
 
       .image {
@@ -438,9 +437,11 @@ header {
           font-size: 2.5rem;
         }
         article {
-          font-size: 1.4rem;
-          color: $light-color;
-          line-height: 1.5rem;
+          font-size: 1.2rem;
+          color: $dark-black;
+          font-weight: 500;
+          line-height: 1.8rem;
+          letter-spacing: 0.1rem;
         }
       }
     }
