--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -10,4 +10,4 @@ $bg: #fefdfc;
 $border: 0.1rem solid rgba(0, 0, 0, 0.2);
 $box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.05);
 $box-shadow1: 0 1rem 2rem rgba(0, 0, 0, 0.5);
-$dark-black: black;
+$dark-black: rgb(0, 0, 0);
